# config-validator

./: .eslintrc.json  Cargo.toml  README.md  package.json  tsconfig.json
src/: errors.rs  index.ts  lib.rs  main.rs  schema.rs  validators.rs
src/environments/: development.ts  index.ts  production.ts  staging.ts
src/schemas/: baseEnvironmentSchema.ts  developmentSchema.ts  stagingSchema.ts
src/utils/: validationUtils.ts
src/validators/: baseSchemaValidator.ts  developmentSchemaValidator.ts  index.ts  json_validator.rs  productionSchemaValidator.ts  stagingSchemaValidator.ts
tests/: integration_test.rs
