[package]
name = "config-validator"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>" ]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
validator = "0.14"
validator_derive = "0.14"

[dev-dependencies]
cargo-husky = "1.5"
